# workatastartup-scraper-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
.github/workflows/: publish-codecov.yml  tests.yml
caddy/: Dockerfile
scripts/: install_chrome.sh
src/: config.rs  main.rs  mod.rs  models.rs  scraper.rs  selectors.rs  utils.rs
tests/: test_config.rs  test_models.rs  test_scraper.rs  test_utils.rs  unit_tests.rs
workscraper_api/: Cargo.toml
workscraper_api/src/: api.rs  database.rs  main.rs
workscraper_api/tests/: test_crud.rs
workscraper_lib/: Cargo.toml
workscraper_lib/src/: config.rs  lib.rs  models.rs  scraper.rs
workscraper_lib/tests/: test_config.rs  test_models.rs  test_scraper.rs  test_utils.rs
